[gd_scene load_steps=3 format=3 uid="uid://csj2riio6sb0o"]

[ext_resource type="Script" uid="uid://bxgothh6go7j8" path="res://character.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://dubm1co5w15ll" path="res://battle_manager.gd" id="2_0xm2m"]

[node name="Main" type="Node2D"]
script = ExtResource("2_0xm2m")

[node name="Player" type="Node2D" parent="."]
position = Vector2(200, 300)
script = ExtResource("1_ig7tw")
max_hp = 300
speed = 75

[node name="HP_Label" type="Label" parent="Player"]
offset_left = 20.0
offset_top = -28.0
offset_right = 78.0
offset_bottom = -5.0
text = "HP: 100"

[node name="ColorRect" type="ColorRect" parent="Player"]
offset_right = 100.0
offset_bottom = 100.0
color = Color(0, 0, 0.8117647, 1)

[node name="Enemy" type="Node2D" parent="."]
position = Vector2(800, 150)
script = ExtResource("1_ig7tw")
speed = 40

[node name="HP_Label" type="Label" parent="Enemy"]
offset_left = 20.0
offset_top = -28.0
offset_right = 78.0
offset_bottom = -5.0
text = "HP: 100"

[node name="ColorRect" type="ColorRect" parent="Enemy"]
offset_right = 100.0
offset_bottom = 100.0
color = Color(0.67058825, 0, 0, 1)

[node name="Enemy2" type="Node2D" parent="."]
position = Vector2(800, 300)
script = ExtResource("1_ig7tw")

[node name="HP_Label" type="Label" parent="Enemy2"]
offset_left = 20.0
offset_top = -28.0
offset_right = 78.0
offset_bottom = -5.0
text = "HP: 100"

[node name="ColorRect" type="ColorRect" parent="Enemy2"]
offset_right = 100.0
offset_bottom = 100.0
color = Color(0.67058825, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="AttackBtn" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Attack (Instant)"

[node name="FireballBtn" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fireball (2s Cast)"

[node name="HealBtn" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Heal (1s, 15 MP)"

[node name="VictoryLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Win"

[node name="DefeatLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Lose"

[node name="TurnLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Turn"

[node name="TargetingUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkillPreviewLabel" type="Label" parent="CanvasLayer/TargetingUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -67.0
offset_right = 20.0
offset_bottom = -44.0
grow_horizontal = 2
text = "Skills"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TargetingUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackBtn" type="Button" parent="CanvasLayer/TargetingUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -67.5
offset_top = 38.0
offset_right = 67.5
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="TurnOrderContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 61.0
grow_vertical = 2
